# docupipe-desktop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/: main.py
src/dp_desktop/: const.py  download.py  list_objects.py  upload.py  utils.py
