[project]
name = "DocuPipe"
version = "0.1.0"
description = "My Flet app"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "flet",
    "requests"
]

[tool.flet]
org = "com.docupipe"
product = "DocuPipe"
company = "DocuPipe"
copyright = "Copyright (C) 2025 by DopcuPanda"

compile.app = true
compile.packages = true
compile.cleanup = true

app.path = "src"
app.module = "main"

[tool.flet.splash]
color = "#FFFFFF"
dark_color = "#333333"
